Agregar id de usuario a los fields del registro

--- a/css/participants-database.css
+++ b/css/participants-database.css
@@ -1,4 +1,4 @@
-/* stylesheet for participants-database plugin */
+/* stylesheet for pacients-database plugin */
 
 [class|="pdb"] .helptext {
   display: inline-block;
