--- a/css/members-database.css
+++ b/css/members-database.css
@@ -1,4 +1,4 @@
-/* stylesheet for pacients-database plugin */
+/* stylesheet for members-databes plugin */
 
 [class|="pdb"] .helptext {
   display: inline-block;
