Agregar id de usuario a los fields del registro

--- a/css/members-database.css
+++ b/css/members-database.css
@@ -1,4 +1,4 @@
-/* stylesheet for members-databes plugin */
+/* stylesheet for members-database plugin */
 
 [class|="pdb"] .helptext {
   display: inline-block;
