--- a/css/PDb-admin.css
+++ b/css/PDb-admin.css
@@ -7,10 +7,10 @@ date 5-2017
 */
 
 /*** PARTICIPANT LIST ***/
-body[class*='members-databes'] .widefat td {
+body[class*='members-database'] .widefat td {
   vertical-align:middle;
 }
-body[class*='members-databes']  .widefat tr:nth-child(even) {
+body[class*='members-database']  .widefat tr:nth-child(even) {
   background-color:#f6f6f6;
 }
 .participants_db input[type='text'],
@@ -272,13 +272,13 @@ input.focused[readonly] {
   background-color: #ffffff;
   border: 1px solid #999;
 }
-body[class*='members-databes'] a.delete {
+body[class*='members-database'] a.delete {
   /*  display:block;
     width:12px;
     height:26px;
     background:url('../ui/delete.png') no-repeat center center;*/
 }
-body[class*='members-databes'] .form-table {
+body[class*='members-database'] .form-table {
   /*  margin-bottom:4em;*/
 }
 #manage_main_fields .dashicons {
@@ -378,7 +378,7 @@ input[type="checkbox"],
   font-weight: normal;
   text-transform: uppercase;
 }
-body[class*='members-databes'] .selectother input[type=text] {
+body[class*='members-database'] .selectother input[type=text] {
   width:auto;
 }
 table.spreadsheet {
@@ -389,13 +389,13 @@ table.spreadsheet {
   border:1px dashed #AAAAAA;
   padding:3px;
 }
-body[class*='members-databes'] .text-block {
+body[class*='members-database'] .text-block {
   max-width: 35em;
   font-size: 1.3em;
   line-height: 1;
 }
-body[class*='members-databes'] .text-block p,
-body[class*='members-databes'] .text-block li {
+body[class*='members-database'] .text-block p,
+body[class*='members-database'] .text-block li {
   line-height: 1.2;
 }
 /* now using WP defaults
@@ -439,10 +439,10 @@ body[class*='members-databes'] .text-block li {
 .edit-participant textarea, .participants_db textarea, .edit-participant select, .participants_db select, .participants_db input, .edit-participant input, .link-element label {
   /*  vertical-align: top;*/
 }
-[class*="members-databes"] .wp-editor-wrap {
+[class*="members-database"] .wp-editor-wrap {
   max-width: 600px;
 }
-[class*="members-databes"] .wp-editor-area {
+[class*="members-database"] .wp-editor-area {
   background-color: #FFFFFF;
   border: 2px solid #DFDFDF;
   color: #333333;
@@ -505,7 +505,7 @@ div.manage-fields-wrap {
 .id, .order, .persistent, .sortable, .admin_column, .display_column, .CSV {
   text-align:center;
 }
-body[class*="members-databes"] .manage-fields tr.highlighted {
+body[class*="members-database"] .manage-fields tr.highlighted {
   background-color:#E0EDF9;
 }
 th.vertical-title  {
@@ -637,10 +637,10 @@ a.dragger {
   padding-bottom: 3px;
   border-bottom: 1px solid #aaa;
 }
-[class*=members-databes] h2 {
+[class*=members-database] h2 {
   border-bottom: 10px solid rgba( 0,0,0,0.08);
 }
-[class*=members-databes] .wrap [class$="icon32"] + h2 {
+[class*=members-database] .wrap [class$="icon32"] + h2 {
   border-bottom: none;
 }
 
@@ -810,7 +810,7 @@ a.dragger {
   /* hide it by default */
   display:none;
 }
-.members-databes-confirm.ui-dialog.ui-widget {
+.members-database-confirm.ui-dialog.ui-widget {
   font-family: inherit;
   font-size:1.1em;
   line-height: 1.4;
@@ -823,10 +823,10 @@ a.dragger {
   z-index:500000;
   display:none;
 }
-.members-databes-confirm.ui-dialog {
+.members-database-confirm.ui-dialog {
   padding:20px 40px;
 }
-.members-databes-confirm.ui-dialog a.button{
+.members-database-confirm.ui-dialog a.button{
   /*stylesforbutton*/
   margin:10px auto 0 auto;
   text-align:center;
@@ -852,13 +852,13 @@ a.dragger {
   position:relative;
   cursor:pointer;
 }
-.members-databes-confirm.ui-dialog a.button:hover{
+.members-database-confirm.ui-dialog a.button:hover{
   background-color:#c33100;
 }
-.members-databes-confirm.ui-dialog .ui-widget-header {
+.members-database-confirm.ui-dialog .ui-widget-header {
   display: none;
 }
-.members-databes-confirm.ui-dialog .ui-dialog-buttonpane {
+.members-database-confirm.ui-dialog .ui-dialog-buttonpane {
   border: none;
   display: block;
   padding: 0;
@@ -870,7 +870,7 @@ a.dragger {
 .ui-dialog .ui-widget, .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
   font-family: inherit;
 }
-.members-databes-confirm.ui-dialog .ui-state-default {
+.members-database-confirm.ui-dialog .ui-state-default {
   background: #E6E6E6;
   border: 1px solid #D3D3D3;
   font-weight: normal;    
@@ -878,17 +878,17 @@ a.dragger {
   margin: 0.5em 0.4em 0.5em 0;
   line-height: 1.8;
 }
-.members-databes-confirm.ui-dialog .ui-state-hover {
+.members-database-confirm.ui-dialog .ui-state-hover {
   border: 1px solid #b3b3b3;
 }
-.members-databes-confirm.ui-dialog .ui-icon {
+.members-database-confirm.ui-dialog .ui-icon {
   vertical-align: middle;
   text-indent: 0;
 }
-.members-databes-confirm.ui-dialog .ui-icon.dashicons[class*="no"] {
+.members-database-confirm.ui-dialog .ui-icon.dashicons[class*="no"] {
   color: #D54E21;
 }
-.members-databes-confirm.ui-dialog .ui-icon.dashicons[class*="yes"] {
+.members-database-confirm.ui-dialog .ui-icon.dashicons[class*="yes"] {
 }
 #confirmation-dialog p{
 }
